--- a/WebQuanLyResort/WebQuanLyResort/Views/Home/Index.cshtml
+++ b/WebQuanLyResort/WebQuanLyResort/Views/Home/Index.cshtml
@@ -1,7 +1,46 @@
-﻿
+﻿@model  List<WebQuanLyResort.Models.phong>
 @{
     ViewBag.Title = "Index";
 }
+@{ 
+    ViewBag.index = 1;
+}
+<div class="row row-cols-2">
+    @foreach (var item in Model)
+    {
+        if (ViewBag.index < 5)
+        {
+            <div class="col mt-2 mb-3 p-4" style="box-shadow: 5px 5px 20px 0px lightgray;">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img  src="~/Image/HinhAnh/@item.HinhAnh.Trim()" class="img-fluid" alt="Phòng Phương Nam Suite">
+                    </div>
+                    <div class="col-md-6">
+                        <h2 class="text-success">@item.loaiphong.ten_loai</h2>
+                        <p style="color: #bb8102">Giá: @item.loaiphong.gia.ToString("C")</p>
+                        <p style="height: 120px">@item.MoTa</p>
+                        <a href="#" class="btn btn-primary">BOOKING</a>
+                        <a href="/phong/index?id=@item.id_phong" class="btn btn-outline-danger">VIEW MORE</a>
+                    </div>
+                </div>
+            </div>
+            ViewBag.index += 1;
+        }
+    }
+</div>
 
-<h2>Index</h2>
+<div class="row p-3">
+    <div class="col-4">
+        <hr />
+    </div>
+    <div class="col-4 " style="text-align: center">
+        <a href="#" class="text-decoration-none text-dark" style="font-size: 25px">xem tất cả các loại phòng</a>
+    </div>
+    <div class="col-4">
+        <hr />
+    </div>
+</div>
+
+
+
 
