--- a/WebQuanLyResort/WebQuanLyResort/Views/Home/Index.cshtml
+++ b/WebQuanLyResort/WebQuanLyResort/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
             <div class="col mt-2 mb-3 p-4" style="box-shadow: 5px 5px 20px 0px lightgray;">
                 <div class="row">
                     <div class="col-md-6">
-                        <img  src="~/Image/HinhAnh/@item.HinhAnh.Trim()" class="img-fluid" alt="Phòng Phương Nam Suite">
+                        <img   src="~/Image/HinhAnh/@item.HinhAnh.Trim()" class="img-fluid" alt="Phòng Phương Nam Suite">
                     </div>
                     <div class="col-md-6">
                         <h2 class="text-success">@item.loaiphong.ten_loai</h2>
@@ -34,7 +34,7 @@
         <hr />
     </div>
     <div class="col-4 " style="text-align: center">
-        <a href="#" class="text-decoration-none text-dark" style="font-size: 25px">xem tất cả các loại phòng</a>
+        <a href="/home/tatcaphong" class="text-decoration-none text-dark" style="font-size: 25px">xem tất cả các loại phòng</a>
     </div>
     <div class="col-4">
         <hr />
